dist_man1_MANS=

if BUILD_ASKALCOIND
  dist_man1_MANS+=askalcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=askalcoin-qt.1
endif

if BUILD_ASKALCOIN_CLI
  dist_man1_MANS+=askalcoin-cli.1
endif

if BUILD_ASKALCOIN_TX
  dist_man1_MANS+=askalcoin-tx.1
endif

if BUILD_ASKALCOIN_UTIL
  dist_man1_MANS+=askalcoin-util.1
endif

if ENABLE_WALLET
if BUILD_ASKALCOIN_WALLET
  dist_man1_MANS+=askalcoin-wallet.1
endif
endif
